Updated to deal with text/colour palette overlap issues

--- a/css/styles.css
+++ b/css/styles.css
@@ -71,23 +71,11 @@ p {
 
 }
 
-ul, ul li {
-	font-family:			Arial, Helvetica, sans-serif;
-	color:					#000;
-	clear:					both;
-	text-align:				justify;
-	margin:					1em;
-}
-
-ul {
-	list-style-type: 		disc;
-}
-
 #pageheader {
 	padding-bottom:			2em;
 	overflow:				hidden;
 	max-width:				100%;
-	background-color: #000;
+	background-color: 		#000;
 }
 
 .skiplink {
@@ -120,7 +108,6 @@ ul {
 	display:				flex-wrap;
 	margin: 				-10px -10px 75px -10px;
 	max-width:				100%;
-
 }
 
 .colourone, .colourtwo, .colourthree, .colourfour, .colourfive, .coloursix, .colourseven, .coloureight {
@@ -137,18 +124,9 @@ ul {
 	font-weight: 			bold;
 	text-transform: 		uppercase;
 	position: 				relative;
-	margin-bottom: 		20px;
+	margin-bottom: 			20px;
 }
 
-@media screen and (max-width: 800px)
-{
-.textone, .texttwo, .textthree, .textfour, .textfive, .textsix, .textseven, .texteight
-{
-	color:					 #000;
-	text-align: center;
-	position: relative;
-}
-}
 
 
 /* #text {
